- Fixed INPUTS filtered as OUTPUTS and vice versa.
- Added ability to set SINKs and SOURCEs as default/fallback.
- Fixed segfault on changing single channel volume.

== 0.5 (04.06.2014):
- Fixed showing newly appeared card profile when SETTINGS panel is active.
- Fixed RECORDING threated as PLAYBACK.
- Added ability to set current device for PLAYBACK/RECORDING.
- Deal with options (e.g. ports, profiles) changing dynamically.
- Fixed segfault on gnustep-base < 1.24 [mainly Debian].

== 0.6 (08.06.2015):
- Moved to ninja for building.
- Better logging mechanism.
- Added ability to configure start view (Fixes #8).
- Reworked configuration.
- Fixed crash when moving up (`h`) through options in settings view.
- Added ability to change volume at a different pace (using J/K shortcuts).
- Added ability to configure volume changing speed (both j/k and J/K).
- Prevented ability to set volume above max value under some circumstances.
- Added ability to filter options.
- Added a manpage.

== 0.6.1 (14.06.2015):
- Fixed crash when $XDG_CONFIG_HOME variable is not set.
- Fixed crash when $XDG_CONFIG_HOME points at non-existing directory.
- Fixed crash when "[Log].Dir" does not exist.

== 0.6.2 (30.08.2015):
- Fixed log occasionally producing files with garbage names.
- Fixed crash when moving up/down in card profiles.

== 0.6.3 (15.11.2015):
- Fixed possible memory leak in backend.
- Fixed possible SEGFAULT when new client appears.

== 0.x.x (xx.xx.xxxx):
- Tweaked colors to be closer to alsamixer.
- Force terminal background color to be black.
- Added "OO/MM" mute labels, as alsamixer does.
- Collapse "default" notification to a single line, below the channel
  name, and leave room for it whether the channel supports it or not.
- Added `o` keybinding to toggle display of control options.
- Added numeric channel level indicator, as alsamixer does (currently
  this will only ever show the first two channels per control).
- Fix settings dialogs when options are turned off.