@@ -53,6 +53,9 @@ Switches to Settings view.
 .TP
 .B Space
 (Un)checks setting in SETTINGS mode.
+.TP
+.B ^L
+Redraws the screen
 .SH CONFIGURATION
 pacmixer uses toml based configuration file stored in either
 .I $XDG_CONFIG_HOME/pacmixer/settings.toml
